tests/tooling/fixtures/native/recovery/positive/message_send_nil_bound_identifier_unary_elision.objc3
// Positive fixture: immutable nil-bound identifier receiver message-send is compile-time elided.
module MessageSendNilBoundIdentifierUnaryElision;

fn main() {
  let receiver = nil;
  let sent = [receiver ping];
  return sent + 12;
}
