tests/tooling/fixtures/native/recovery/negative/negative_nil_literal_parser_missing_rhs.objc3
// Expected diagnostic code(s): O3P103.
module NegativeNilLiteralParserMissingRhs;

let seed = nil + ;

fn main() -> i32 {
  return 0;
}
